[gd_scene load_steps=16 format=3 uid="uid://bysyq46j6ycis"]

[ext_resource type="Script" uid="uid://caa84ntbsorb8" path="res://Scripts/ProfilePopUp.gd" id="1_script"]
[ext_resource type="FontFile" uid="uid://bdlqaeel30c00" path="res://Fonts/dyslexiafont/OpenDyslexic-Bold.otf" id="2_73kok"]
[ext_resource type="Texture2D" uid="uid://0con8ixqofpr" path="res://gui/Update/UI/ui 8.png" id="2_rwnca"]
[ext_resource type="Texture2D" uid="uid://cmvfv5h4u7j6e" path="res://gui/Update/icons/close icon.png" id="3_rwnca"]
[ext_resource type="FontFile" uid="uid://l1q8mfvbxty3" path="res://Fonts/dyslexiafont/OpenDyslexic-Regular.otf" id="3_uyv5l"]
[ext_resource type="Texture2D" uid="uid://bctgpjuu2tes7" path="res://gui/profile pic with border.png" id="5_r1smr"]
[ext_resource type="Texture2D" uid="uid://bky3s7o7g08k8" path="res://gui/Update/icons/bronze medal.png" id="7_medal"]
[ext_resource type="Texture2D" uid="uid://dpejfssp2t44k" path="res://gui/Update/icons/edit name.png" id="7_rwnca"]
[ext_resource type="Texture2D" uid="uid://d1y2su33nhh8p" path="res://gui/Update/icons/copy UID.png" id="8_ampbo"]
[ext_resource type="PackedScene" uid="uid://e6bec84rrthm" path="res://Sprites/Animation/DefaultPlayer_Animation.tscn" id="10_ampbo"]
[ext_resource type="Texture2D" uid="uid://b1vdji3n0ktqv" path="res://gui/Update/UI/defeat UI.png" id="10_vhpl5"]
[ext_resource type="Texture2D" uid="uid://bt0tigh26flog" path="res://gui/Update/icons/level selection.png" id="11_ampbo"]
[ext_resource type="Texture2D" uid="uid://cylxg6njg7bam" path="res://gui/Update/UI/yellow button.png" id="12_ampbo"]
[ext_resource type="Texture2D" uid="uid://dy4pabxg81hga" path="res://gui/UI/ui 2.png" id="12_kmls2"]
[ext_resource type="Texture2D" uid="uid://5kclvhwf1uke" path="res://gui/Update/UI/green button.png" id="13_r1smr"]

[node name="ProfilePopUp" type="Node2D"]
script = ExtResource("1_script")

[node name="Background" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -26.0
offset_top = -48.0
offset_right = 1554.0
offset_bottom = 854.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.6)

[node name="ProfileContainer" type="Control" parent="."]
custom_minimum_size = Vector2(750, 600)
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 371.0
offset_top = 66.0
offset_right = 1121.0
offset_bottom = 747.0
grow_horizontal = 2
grow_vertical = 2

[node name="BackgroundTexture" type="TextureRect" parent="ProfileContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -47.0
offset_top = -39.0
offset_right = 43.0
offset_bottom = 43.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_rwnca")
expand_mode = 1
stretch_mode = 6

[node name="CloseButton" type="TextureButton" parent="ProfileContainer"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -4.0
offset_top = -46.0
offset_right = 52.0
offset_bottom = 8.0
grow_horizontal = 0
mouse_default_cursor_shape = 2
texture_normal = ExtResource("3_rwnca")
ignore_texture_size = true
stretch_mode = 5

[node name="TitleLabel" type="Label" parent="ProfileContainer"]
layout_mode = 0
offset_left = 242.0
offset_top = 18.0
offset_right = 478.0
offset_bottom = 84.0
theme_override_fonts/font = ExtResource("2_73kok")
theme_override_font_sizes/font_size = 36
text = "PROFILE"
horizontal_alignment = 1

[node name="PictureContainer" type="TextureRect" parent="ProfileContainer"]
layout_mode = 0
offset_left = 8.0
offset_top = 148.0
offset_right = 181.0
offset_bottom = 322.0
texture = ExtResource("5_r1smr")

[node name="ProfilePictureButton" type="TextureButton" parent="ProfileContainer/PictureContainer"]
layout_mode = 0
offset_left = 25.0
offset_top = 26.0
offset_right = 149.0
offset_bottom = 148.0
mouse_default_cursor_shape = 2
ignore_texture_size = true
stretch_mode = 5

[node name="UserInfoArea" type="Control" parent="ProfileContainer"]
layout_mode = 1
anchors_preset = 0
offset_left = 190.0
offset_top = 153.0
offset_right = 740.0
offset_bottom = 324.0

[node name="NameLabel" type="Label" parent="ProfileContainer/UserInfoArea"]
layout_mode = 0
offset_right = 181.0
offset_bottom = 39.0
theme_override_fonts/font = ExtResource("2_73kok")
theme_override_font_sizes/font_size = 24
text = "Username:"

[node name="NameValue" type="Label" parent="ProfileContainer/UserInfoArea"]
layout_mode = 0
offset_left = 184.0
offset_top = 3.0
offset_right = 453.0
offset_bottom = 48.0
scale = Vector2(1.00685, 1)
theme_override_colors/font_color = Color(0.988235, 0.988235, 0, 1)
theme_override_fonts/font = ExtResource("3_uyv5l")
theme_override_font_sizes/font_size = 22
text = "Loading..."

[node name="EditNameButton" type="TextureButton" parent="ProfileContainer/UserInfoArea"]
layout_mode = 0
offset_left = 462.0
offset_top = 11.0
offset_right = 470.0
offset_bottom = 19.0
scale = Vector2(2.89615, 3.31034)
tooltip_text = "Edit Username"
mouse_default_cursor_shape = 2
texture_normal = ExtResource("7_rwnca")

[node name="EmailLabel" type="Label" parent="ProfileContainer/UserInfoArea"]
layout_mode = 0
offset_top = 89.0
offset_right = 181.0
offset_bottom = 126.0
theme_override_fonts/font = ExtResource("2_73kok")
theme_override_font_sizes/font_size = 20
text = "Email:"

[node name="EmailValue" type="Label" parent="ProfileContainer/UserInfoArea"]
layout_mode = 0
offset_left = 101.0
offset_top = 89.0
offset_right = 473.0
offset_bottom = 126.0
theme_override_colors/font_color = Color(0.988235, 0.988235, 0, 1)
theme_override_fonts/font = ExtResource("3_uyv5l")
theme_override_font_sizes/font_size = 20
text = "Loading..."

[node name="UIDLabel" type="Label" parent="ProfileContainer/UserInfoArea"]
layout_mode = 0
offset_left = 4.0
offset_top = 48.0
offset_right = 185.0
offset_bottom = 82.0
theme_override_fonts/font = ExtResource("2_73kok")
theme_override_font_sizes/font_size = 18
text = "UID:"

[node name="UIDValue" type="Label" parent="ProfileContainer/UserInfoArea"]
layout_mode = 0
offset_left = 72.0
offset_top = 52.0
offset_right = 486.0
offset_bottom = 86.0
theme_override_colors/font_color = Color(0.988235, 0.988235, 0, 1)
theme_override_fonts/font = ExtResource("3_uyv5l")
theme_override_font_sizes/font_size = 16
text = "Loading..."

[node name="CopyUIDButton" type="TextureButton" parent="ProfileContainer/UserInfoArea"]
layout_mode = 0
offset_left = 463.0
offset_top = 48.0
offset_right = 471.0
offset_bottom = 56.0
scale = Vector2(2.92016, 3.53089)
tooltip_text = "Copy UID to Clipboard"
mouse_default_cursor_shape = 2
texture_normal = ExtResource("8_ampbo")

[node name="RankLabel" type="Label" parent="ProfileContainer/UserInfoArea"]
layout_mode = 0
offset_top = 126.0
offset_right = 73.0
offset_bottom = 159.0
theme_override_fonts/font = ExtResource("2_73kok")
theme_override_font_sizes/font_size = 20
text = "Rank:"

[node name="RankIcon" type="TextureRect" parent="ProfileContainer/UserInfoArea"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 0
offset_left = 87.0
offset_top = 126.0
offset_right = 117.0
offset_bottom = 156.0
texture = ExtResource("7_medal")
expand_mode = 1
stretch_mode = 5

[node name="RankValue" type="Label" parent="ProfileContainer/UserInfoArea"]
layout_mode = 0
offset_left = 120.0
offset_top = 124.0
offset_right = 280.0
offset_bottom = 161.0
theme_override_colors/font_color = Color(0.988235, 0.988235, 0, 1)
theme_override_fonts/font = ExtResource("3_uyv5l")
theme_override_font_sizes/font_size = 20
text = "Rank"

[node name="Separator" type="ColorRect" parent="ProfileContainer"]
layout_mode = 0
offset_left = 33.0
offset_top = 334.0
offset_right = 716.0
offset_bottom = 336.0
color = Color(0.203922, 0.203922, 0.203922, 0.501961)

[node name="StatsArea" type="Control" parent="ProfileContainer"]
layout_mode = 1
anchors_preset = 0
offset_left = 241.0
offset_top = 353.0
offset_right = 470.0
offset_bottom = 604.0

[node name="StatsTitle" type="Label" parent="ProfileContainer/StatsArea"]
layout_mode = 0
offset_left = -7.0
offset_top = 12.0
offset_right = 220.0
offset_bottom = 57.0
theme_override_fonts/font = ExtResource("2_73kok")
theme_override_font_sizes/font_size = 24
text = "Player Stats"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HealthLabel" type="Label" parent="ProfileContainer/StatsArea"]
layout_mode = 0
offset_left = -8.0
offset_top = 62.0
offset_right = 102.0
offset_bottom = 99.0
theme_override_fonts/font = ExtResource("2_73kok")
theme_override_font_sizes/font_size = 20
text = "Health:"

[node name="HealthValue" type="Label" parent="ProfileContainer/StatsArea"]
layout_mode = 0
offset_left = 101.0
offset_top = 61.0
offset_right = 183.0
offset_bottom = 98.0
theme_override_colors/font_color = Color(0.99, 0.99, 0, 1)
theme_override_fonts/font = ExtResource("3_uyv5l")
theme_override_font_sizes/font_size = 20
text = "10000"

[node name="AttackLabel" type="Label" parent="ProfileContainer/StatsArea"]
layout_mode = 0
offset_left = -7.0
offset_top = 97.0
offset_right = 103.0
offset_bottom = 134.0
theme_override_fonts/font = ExtResource("2_73kok")
theme_override_font_sizes/font_size = 20
text = "Attack:"

[node name="AttackValue" type="Label" parent="ProfileContainer/StatsArea"]
layout_mode = 0
offset_left = 102.0
offset_top = 96.0
offset_right = 184.0
offset_bottom = 133.0
theme_override_colors/font_color = Color(0.99, 0.99, 0, 1)
theme_override_fonts/font = ExtResource("3_uyv5l")
theme_override_font_sizes/font_size = 20
text = "1000"

[node name="DurabilityLabel" type="Label" parent="ProfileContainer/StatsArea"]
layout_mode = 0
offset_left = -7.0
offset_top = 134.0
offset_right = 150.0
offset_bottom = 171.0
theme_override_fonts/font = ExtResource("2_73kok")
theme_override_font_sizes/font_size = 20
text = "Durability:"

[node name="DurabilityValue" type="Label" parent="ProfileContainer/StatsArea"]
layout_mode = 0
offset_left = 149.0
offset_top = 134.0
offset_right = 231.0
offset_bottom = 171.0
theme_override_colors/font_color = Color(0.99, 0.99, 0, 1)
theme_override_fonts/font = ExtResource("3_uyv5l")
theme_override_font_sizes/font_size = 20
text = "1000"

[node name="EnergyLabel" type="Label" parent="ProfileContainer/StatsArea"]
layout_mode = 0
offset_left = -5.0
offset_top = 173.0
offset_right = 115.0
offset_bottom = 210.0
theme_override_fonts/font = ExtResource("2_73kok")
theme_override_font_sizes/font_size = 20
text = "Energy:"

[node name="EnergyValue" type="Label" parent="ProfileContainer/StatsArea"]
layout_mode = 0
offset_left = 114.0
offset_top = 173.0
offset_right = 234.0
offset_bottom = 210.0
theme_override_colors/font_color = Color(0.99, 0.99, 0, 1)
theme_override_fonts/font = ExtResource("3_uyv5l")
theme_override_font_sizes/font_size = 20
text = "100/100"

[node name="Level" type="Label" parent="ProfileContainer/StatsArea"]
layout_mode = 0
offset_left = -2.0
offset_top = 212.0
offset_right = 81.0
offset_bottom = 249.0
theme_override_fonts/font = ExtResource("2_73kok")
theme_override_font_sizes/font_size = 20
text = "Level:"
horizontal_alignment = 1

[node name="Level2" type="Label" parent="ProfileContainer/StatsArea"]
layout_mode = 0
offset_left = 92.0
offset_top = 212.0
offset_right = 131.0
offset_bottom = 249.0
theme_override_colors/font_color = Color(0.99, 0.99, 0, 1)
theme_override_fonts/font = ExtResource("3_uyv5l")
theme_override_font_sizes/font_size = 20
text = "100"

[node name="TextureRect" type="TextureRect" parent="ProfileContainer"]
layout_mode = 0
offset_left = -13.0
offset_top = 339.0
offset_right = 224.0
offset_bottom = 612.0
texture = ExtResource("10_vhpl5")

[node name="CharacterArea" type="Node2D" parent="ProfileContainer/TextureRect"]
position = Vector2(125, 167)
scale = Vector2(0.854514, 0.854514)

[node name="DefaultPlayerAnimation" parent="ProfileContainer/TextureRect/CharacterArea" instance=ExtResource("10_ampbo")]
position = Vector2(-9.36205, -9.36209)
scale = Vector2(3.94353, 3.94353)

[node name="DungeonArea" type="Button" parent="ProfileContainer"]
layout_mode = 1
offset_left = 502.0
offset_top = 357.0
offset_right = 750.0
offset_bottom = 670.0
mouse_default_cursor_shape = 2
icon = ExtResource("12_kmls2")
icon_alignment = 1
expand_icon = true

[node name="DungeonValue" type="Label" parent="ProfileContainer/DungeonArea"]
layout_mode = 0
offset_left = 26.0
offset_top = 14.0
offset_right = 227.0
offset_bottom = 50.0
theme_override_colors/font_color = Color(0.988235, 0.988235, 0, 1)
theme_override_fonts/font = ExtResource("3_uyv5l")
theme_override_font_sizes/font_size = 18
text = "3: The Mountain"

[node name="DungeonImage" type="TextureRect" parent="ProfileContainer/DungeonArea"]
layout_mode = 0
offset_left = 73.0
offset_top = 53.0
offset_right = 196.0
offset_bottom = 259.0
texture = ExtResource("11_ampbo")
expand_mode = 1
stretch_mode = 6

[node name="StageLabel" type="Label" parent="ProfileContainer/DungeonArea"]
layout_mode = 0
offset_left = 10.0
offset_top = 259.0
offset_right = 193.0
offset_bottom = 295.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_uyv5l")
theme_override_font_sizes/font_size = 18
text = "Current Stage:"

[node name="StageValue" type="Label" parent="ProfileContainer/DungeonArea"]
layout_mode = 0
offset_left = 204.0
offset_top = 261.0
offset_right = 248.0
offset_bottom = 297.0
theme_override_colors/font_color = Color(0.988235, 0.988235, 0, 1)
theme_override_fonts/font = ExtResource("3_uyv5l")
theme_override_font_sizes/font_size = 18
text = "5/5"

[node name="LogoutButton" type="Button" parent="ProfileContainer"]
layout_mode = 0
offset_left = 237.0
offset_top = 628.0
offset_right = 448.0
offset_bottom = 682.0
scale = Vector2(1.14248, 1.12309)
mouse_default_cursor_shape = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_73kok")
text = "Logout
"
icon = ExtResource("12_ampbo")
flat = true
icon_alignment = 1
expand_icon = true

[node name="EditUsernamePanel" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -26.0
offset_top = -48.0
offset_right = 1554.0
offset_bottom = 854.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelBackground" type="ColorRect" parent="EditUsernamePanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.7)

[node name="EditContainer" type="Control" parent="EditUsernamePanel"]
custom_minimum_size = Vector2(500, 300)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -150.0
offset_right = 250.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelTexture" type="NinePatchRect" parent="EditUsernamePanel/EditContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_rwnca")

[node name="ContentContainer" type="MarginContainer" parent="EditUsernamePanel/EditContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 40

[node name="VBoxContainer" type="Control" parent="EditUsernamePanel/EditContainer/ContentContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="EditUsernamePanel/EditContainer/ContentContainer/VBoxContainer"]
layout_mode = 2
offset_left = -3.0
offset_top = -24.0
offset_right = 417.0
offset_bottom = 21.0
theme_override_fonts/font = ExtResource("2_73kok")
theme_override_font_sizes/font_size = 20
text = "Edit Username"
horizontal_alignment = 1

[node name="InstructionLabel" type="Label" parent="EditUsernamePanel/EditContainer/ContentContainer/VBoxContainer"]
layout_mode = 2
offset_top = 65.0
offset_right = 420.0
offset_bottom = 99.0
theme_override_fonts/font = ExtResource("3_uyv5l")
theme_override_font_sizes/font_size = 18
text = "Enter your new username:"
horizontal_alignment = 1

[node name="InputContainer" type="HBoxContainer" parent="EditUsernamePanel/EditContainer/ContentContainer/VBoxContainer"]
layout_mode = 2
offset_top = 119.0
offset_right = 420.0
offset_bottom = 159.0
alignment = 1

[node name="UsernameLineEdit" type="LineEdit" parent="EditUsernamePanel/EditContainer/ContentContainer/VBoxContainer/InputContainer"]
custom_minimum_size = Vector2(300, 40)
layout_mode = 2
theme_override_fonts/font = ExtResource("3_uyv5l")
theme_override_font_sizes/font_size = 16
placeholder_text = "New username"

[node name="ButtonContainer" type="HBoxContainer" parent="EditUsernamePanel/EditContainer/ContentContainer/VBoxContainer"]
layout_mode = 2
offset_top = 179.0
offset_right = 420.0
offset_bottom = 224.0
theme_override_constants/separation = 20
alignment = 1

[node name="CancelButton" type="Button" parent="EditUsernamePanel/EditContainer/ContentContainer/VBoxContainer/ButtonContainer"]
custom_minimum_size = Vector2(120, 45)
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_73kok")
text = "Cancel"
icon = ExtResource("12_ampbo")
flat = true
icon_alignment = 1
expand_icon = true

[node name="ConfirmButton" type="Button" parent="EditUsernamePanel/EditContainer/ContentContainer/VBoxContainer/ButtonContainer"]
custom_minimum_size = Vector2(120, 45)
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_73kok")
theme_override_font_sizes/font_size = 0
text = "Confirm"
icon = ExtResource("13_r1smr")
flat = true
icon_alignment = 1
expand_icon = true

[node name="ErrorLabel" type="Label" parent="EditUsernamePanel/EditContainer/ContentContainer/VBoxContainer"]
visible = false
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.3, 0.3, 1)
theme_override_fonts/font = ExtResource("3_uyv5l")
theme_override_font_sizes/font_size = 16
text = "Username cannot be empty!"
horizontal_alignment = 1

[connection signal="pressed" from="ProfileContainer/CloseButton" to="." method="_on_close_button_pressed"]
[connection signal="pressed" from="ProfileContainer/PictureContainer/ProfilePictureButton" to="." method="_on_profile_picture_button_pressed"]
[connection signal="pressed" from="ProfileContainer/LogoutButton" to="." method="_on_logout_button_pressed"]
[connection signal="text_submitted" from="EditUsernamePanel/EditContainer/ContentContainer/VBoxContainer/InputContainer/UsernameLineEdit" to="." method="_on_username_text_submitted"]
[connection signal="pressed" from="EditUsernamePanel/EditContainer/ContentContainer/VBoxContainer/ButtonContainer/CancelButton" to="." method="_on_edit_username_cancel_pressed"]
[connection signal="pressed" from="EditUsernamePanel/EditContainer/ContentContainer/VBoxContainer/ButtonContainer/ConfirmButton" to="." method="_on_edit_username_confirm_pressed"]
